Z-index bug fixed 3rd attempt.

--- a/src/assets/styles/pages/f-events.scss
+++ b/src/assets/styles/pages/f-events.scss
@@ -12,7 +12,7 @@
     gap: 1em .625em;
     margin-top: 1.25em;
     position: relative;
-    z-index: 5;
+    //z-index: 5;
   }
   .poster__top,
   .poster-filter{
