--- a/src/assets/styles/pages/i-masters.scss
+++ b/src/assets/styles/pages/i-masters.scss
@@ -107,7 +107,7 @@
     gap: 2.25em .625em;
     margin-top: 1.25em;
     position: relative;
-    z-index: 5;
+    //z-index: 5;
     .master-card{
       border-radius: 1.25em;
       box-shadow: 0 .25em 1.25em rgba(0, 0, 0, 0.1);
